modified:   Protokoll.pdf 	modified:   durchfuehrung.tex 	modified:   protokoll.tex

--- a/versuch_1/durchfuehrung.tex
+++ b/versuch_1/durchfuehrung.tex
@@ -6,5 +6,12 @@ Der Schaltkreis hat 2,7 Ohm + dem Messwiderstand.
 
 
 
-
+\begin{figure}
+\centering
+    \subcaptionbox{Durchlassfilter\label{img:durchlass}}[.4\linewidth]
+            {\includegraphics[width=.4\textwidth]{images/durchlassfilter}}
+    \subcaptionbox{Sperrfilter\label{img:sperr}}[.4\linewidth]
+            {\includegraphics[width=.4\textwidth]{images/sperrfilter}}
+\caption{Fotos der Versuchsaufbauten}
+\end{figure}
 
