modified:   .DS_Store 	modified:   durchfuehrung.tex 	modified:   ergebnisse.tex 	modified:   protokoll.pdf 	modified:   protokoll.tex

--- a/versuch_1/durchfuehrung.tex
+++ b/versuch_1/durchfuehrung.tex
@@ -9,9 +9,9 @@ Der Schaltkreis hat 2,7 Ohm + dem Messwiderstand.
 \begin{figure}
 \centering
     \subcaptionbox{Durchlassfilter\label{img:durchlass}}[.4\linewidth]
-            {\includegraphics[width=.4\textwidth]{images/durchlassfilter}}
+            {\includegraphics[width=.4\textwidth]{images/durchlassfilter.jpg}}
     \subcaptionbox{Sperrfilter\label{img:sperr}}[.4\linewidth]
-            {\includegraphics[width=.4\textwidth]{images/sperrfilter}}
+            {\includegraphics[width=.4\textwidth]{images/sperrfilter.jpg}}
 \caption{Fotos der Versuchsaufbauten}
 \end{figure}
 
