--- a/versuch_1/ergebnisse.tex
+++ b/versuch_1/ergebnisse.tex
@@ -1,1 +1,6 @@
 \section{Diskussion der Ergebnisse}
+\begin{figure}
+	\includegraphics[width=\textwidth]{images/durchlassfilter+theorie+R_ges-fit}
+\caption{Plot der Messdaten des Durchlassfilters}
+\label{plot:durchlass+R_ges-fit}
+\end{figure}
