--- a/versuch_1/theorie.tex
+++ b/versuch_1/theorie.tex
@@ -1,6 +1,25 @@
 \section{Theoretische Betrachtung}
 \subsection{Durchlassfilter}
-Ein Durchlassfilter ist eine Reihenschaltung aus Kondensator, Spule und Widerstand. Sieh Abbildung \ref{plan:durchlass} auf Seite \pageref{plan:durchlass}.\\
+Ein Durchlassfilter ist eine Reihenschaltung aus Kondensator, Spule und Widerstand. \aref{plan:durchlass}
+\begin{figure}
+\centering
+\begin{circuitikz}[european voltages]
+\draw
+  (0,0) to [short, -o] (6,0)
+  (6,0) to [open, l_=$U_a$] (6,4) %Ausgangsspannung
+  %to [voltmeter, l_=$U_a$] (6,4) % Messung
+  (6,4) to [short, o-] (5,4) 
+
+  (0,0) to [csV, l=$U_e$] (0,4) % Eingangsspannung
+  to [short] (1,4)
+  to [C, l=$C$] (3,4) % Kondensator
+  to [L, l=$L$] (5,4) % Spule
+  to [R, l_=$R_m$] (5,0); % Messwiderstand
+
+\end{circuitikz}
+\label{plan:durchlass}
+\caption{Schaltbild eines Durchlassfilters}
+\end{figure}\\
 Mit den Kirchhoffschen Regeln und 
 $
 U=Z\cdot I
@@ -45,25 +64,7 @@ Wenn die Spule einen Widerstand $R_L$ besitzt, ändert sich Gleichung (2) zu
 \Rightarrow\left| U_a \right| = \frac{R}{\sqrt{(R+R_L)^2+\left(\omega L - \frac{1}{\omega C}\right)}}\cdot \left| U_e \right|
 \end{equation}
 also wird die Wechselspannung $U_e$ selbst bei der Resonanzfrequenz nicht vollständig durchgelassen.
-\begin{figure}
-\centering
-\begin{circuitikz}[european voltages]
-\draw
-  (0,0) to [short, -o] (6,0)
-  (6,0) to [open, l_=$U_a$] (6,4) %Ausgangsspannung
-  %to [voltmeter, l_=$U_a$] (6,4) % Messung
-  (6,4) to [short, o-] (5,4) 
 
-  (0,0) to [csV, l=$U_e$] (0,4) % Eingangsspannung
-  to [short] (1,4)
-  to [C, l=$C$] (3,4) % Kondensator
-  to [L, l=$L$] (5,4) % Spule
-  to [R, l_=$R_m$] (5,0); % Messwiderstand
-
-\end{circuitikz}
-\caption{Schaltbild Durchlassfilter}
-\label{plan:durchlass}
-\end{figure}
 \subsection{Sperrfilter}
 Beim Sperrfilter werden die Spule und der Kondensator nun parallel geschaltet. (hier Schaltbild einfügen)
 Analog zum Durchlassfilter ergibt sich nun
@@ -74,6 +75,64 @@ U_a=\frac{R}{R-i \frac{1}{\omega C - \frac{1}{\omega L}}}\cdot U_e\\
 \Rightarrow\left| U_a \right| = \frac{R}{\sqrt{R^2+\frac{1}{(\omega C - \frac{1}{\omega L})^2}}}\cdot \left| U_e \right|
 \end{equation}
 Bei der Resonanzfrequenz (3) geht nun $\left| U_a \right|\longrightarrow 0$, d.h. die Frequenz $\omega_R$ wird blockiert, während andere Frequenzen durchgelassen werden.
+
+
+Berechnet man hier die Frequenzbreite analog zu (4) und (5) ergibt sich:
+
+\begin{equation}
+\Delta\omega = \frac{1}{RC\sqrt{1-(1-\frac{1}{\sqrt{2}})^2}}
+\end{equation}
+
+Hier ergeben also größere Widerstände 'schärfere' Peaks.  
+
+
+Auch hier kann man der Spule einen Widerstand $R_L$ zuweisen, außerdem wurde ein nicht weiter spezifizierter zusätzlicher Widerstand $R_{zus}$ eingefügt.
+\begin{figure}
+\centering
+\begin{circuitikz}
+\draw
+  (0,1) to [short, -o] (7,1)
+  (6,1) to [open, l_=$U_a$] (7,4) %Ausgangsspannung
+  (7,4) to [short, o-] (6,4) 
+
+  (0,1) to [csV, l=$U_e$] (0,4) % Eingangsspannung
+  to [short, ] (1,4)
+  (1,5) to [short] (1,3)
+  to [C, l_=$C$] (4,3) % Kondensator
+  to [short] (4,5)
+  to [R, l=$R_L$] (2.5,5) %Widerstand der Spule
+  to [L, l=$L$] (1,5) % Spule
+  (4,4) to [R,l=$R_{zus}$] (6,4) 
+  to [R, l_=$R_m$] (6,1); % Messwiderstand
+\end{circuitikz}
+\caption{Schaltbild eines Sperrfilters mit zusätzlichen Widerständen}
+\label{plan:sperr-R_L}
+\end{figure}
+
+Der Gesamtwiderstand der Parallelschaltung aus Spule und Kondensator ist dann:
+
+\begin{equation}
+Z_{SK} = \frac{1}{\frac{1}{R_L+i\omega L}+i\omega C}
+\end{equation}
+
+Der Gesamtwiderstand der Schaltung kann nun geschrieben werden als
+
+\begin{equation}
+Z_{SK}+R_{zus}+R = \frac{\gamma R_L - i\omega\gamma[C\gamma-L]}{R_L^2+\omega^2[C\gamma-L]^2} + R_{ges}
+\end{equation}
+
+mit $\gamma=R_L^2+\omega^2L^2$ und $R_{ges}=R+R_{zus}$
+
+Analoges Vorgehen zu (1) und (2) liefert schließlich:
+
+\begin{equation}
+\frac{\left|U_a \right|}{\left|U_e \right|} = \frac{R \beta}{\sqrt{\left(\gamma R_L + R_{ges}\beta\right)^2+ \gamma^2 \epsilon^2}}
+\end{equation}
+
+mit $\gamma=R_L^2+\omega^2L^2$, $\epsilon=\omega[C\gamma-L]$, $\beta=R_L^2 + \epsilon^2$
+
+Einsetzen der Substitutionen und Ausschreiben liefert dann folgende Gleichung, die für die Theoriekurven in Abb. REFERENZ SPERRFILTER verwendet wurde.
+
 \footnotesize
 \begin{align}
 &\left| \frac{U_a}{U_e} \right| =  \\
