modified:   protokoll.pdf 	modified:   theorie.tex

--- a/versuch_1/theorie.tex
+++ b/versuch_1/theorie.tex
@@ -86,7 +86,7 @@ Berechnet man hier die Frequenzbreite analog zu (4) und (5) ergibt sich:
 Hier ergeben also größere Widerstände 'schärfere' Peaks.  
 
 
-Auch hier kann man der Spule einen Widerstand $R_L$ zuweisen, außerdem wurde ein nicht weiter spezifizierter zusätzlicher Widerstand $R_{zus}$ eingefügt.
+Auch hier kann man der Spule einen Widerstand $R_L$ zuweisen, außerdem wurde ein nicht weiter spezifizierter zusätzlicher Widerstand $R_{zus}$ eingefügt. Siehe Abb. \ref{plan:sperr-R_L} auf Seite \pageref{plan:sperr-R_L}.
 \begin{figure}
 \centering
 \begin{circuitikz}
