modified:   durchfuehrung.tex 	modified:   ergebnisse.tex 	modified:   header.tex 	modified:   protokoll.pdf 	modified:   theorie.tex

--- a/versuch_1/ergebnisse.tex
+++ b/versuch_1/ergebnisse.tex
@@ -1,6 +1,10 @@
 \section{Diskussion der Ergebnisse}
 \begin{figure}
-	\includegraphics[width=\textwidth]{images/durchlassfilter+theorie+R_ges-fit}
+	\includegraphics[width=.9\textwidth]{images/durchlassfilter+theorie+R_ges-fit}
 \caption{Plot der Messdaten des Durchlassfilters}
 \label{plot:durchlass+R_ges-fit}
+
+	\includegraphics[width=.9\textwidth]{images/plot-sperrfilter+theorie+R_L}
+\caption{Plot der Messdaten des Sperrfilters mit Theoriekurven}
+\label{plot:sperr}
 \end{figure}
