--- a/versuch_1/header.tex
+++ b/versuch_1/header.tex
@@ -1,6 +1,10 @@
 \documentclass[
 ]{scrartcl}
 
+%Referenzen zwischen unterschiedlichen Dateien
+\usepackage{xr}
+\externaldocument{theorie}
+
 %Deutsche Sprachunterstützung
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
