--- a/versuch_1/theorie.tex
+++ b/versuch_1/theorie.tex
@@ -11,14 +11,15 @@ Ein Durchlassfilter ist eine Reihenschaltung aus Kondensator, Spule und Widersta
   (6,4) to [short, o-] (5,4) 
 
   (0,0) to [csV, l=$U_e$] (0,4) % Eingangsspannung
-  to [short] (1,4)
-  to [C, l=$C$] (3,4) % Kondensator
-  to [L, l=$L$] (5,4) % Spule
+  %to [short] (1,4)
+  to [C, l=$C$] (2.5,4) % Kondensator
+  to [L, l=$L$] (4.5,4) % Spule
+  to [short] (5,4)
   to [R, l_=$R_m$] (5,0); % Messwiderstand
 
 \end{circuitikz}
-\label{plan:durchlass}
 \caption{Schaltbild eines Durchlassfilters}
+\label{plan:durchlass}
 \end{figure}\\
 Mit den Kirchhoffschen Regeln und 
 $
@@ -66,7 +67,27 @@ Wenn die Spule einen Widerstand $R_L$ besitzt, ändert sich Gleichung (2) zu
 also wird die Wechselspannung $U_e$ selbst bei der Resonanzfrequenz nicht vollständig durchgelassen.
 
 \subsection{Sperrfilter}
-Beim Sperrfilter werden die Spule und der Kondensator nun parallel geschaltet. (hier Schaltbild einfügen)
+Beim Sperrfilter werden die Spule und der Kondensator nun parallel geschaltet. (siehe Abb. \ref{plan:sperr} auf Seite \pageref{plan:sperr})
+\begin{figure}
+\centering
+\begin{circuitikz}
+\draw
+  (0,1) to [short, -o] (6,1)
+  (6,1) to [open, l_=$U_a$] (6,4) %Ausgangsspannung
+  (6,4) to [short, o-] (5,4) 
+
+  (0,1) to [csV, l=$U_e$] (0,4) % Eingangsspannung
+  to [short, ] (1,4)
+  (1,5) to [short] (1,3)
+  to [C, l_=$C$] (4,3) % Kondensator
+  to [short] (4,5)
+  to [L, l=$L$] (1,5) % Spule
+  (4,4) to [short] (5,4) 
+  to [R, l_=$R_m$] (5,1); % Messwiderstand
+\end{circuitikz}
+\caption{Schaltbild eines Sperrfilters}
+\label{plan:sperr}
+\end{figure}
 Analog zum Durchlassfilter ergibt sich nun
 \begin{equation}
 U_a=\frac{R}{R-i \frac{1}{\omega C - \frac{1}{\omega L}}}\cdot U_e\\
@@ -105,7 +126,7 @@ Auch hier kann man der Spule einen Widerstand $R_L$ zuweisen, außerdem wurde ei
   (4,4) to [R,l=$R_{zus}$] (6,4) 
   to [R, l_=$R_m$] (6,1); % Messwiderstand
 \end{circuitikz}
-\caption{Schaltbild eines Sperrfilters mit zusätzlichen Widerständen}
+\caption{Position der zusätzlich angenommenen Widerstände}
 \label{plan:sperr-R_L}
 \end{figure}
 
@@ -139,23 +160,3 @@ Einsetzen der Substitutionen und Ausschreiben liefert dann folgende Gleichung, d
 &\frac{R\left(R^2_L+\omega ^2\left[C\left(R^2_L+\omega ^2 L^2 \right) - L\right] ^2 \right)}{\sqrt{ \left( R^2_L + \omega ^2L^2\right) R_L+R_{ges}\left\{ R_L^2+\omega ^2\left[ C\left( R_L^2+\omega ^2L^2\right) -L\right] ^2\right\}^2+\left(R^2_L+\omega^2L^2\right)^2\omega^2\left[C\left(R^2_L+\omega^2L^2\right)-L\right]}}\nonumber
 \end{align}
 \normalsize
-\begin{figure}
-\centering
-\begin{circuitikz}
-\draw
-  (0,1) to [short, -o] (6,1)
-  (6,1) to [open, l_=$U_a$] (6,4) %Ausgangsspannung
-  (6,4) to [short, o-] (5,4) 
-
-  (0,1) to [csV, l=$U_e$] (0,4) % Eingangsspannung
-  to [short, ] (1,4)
-  (1,5) to [short] (1,3)
-  to [C, l_=$C$] (4,3) % Kondensator
-  to [short] (4,5)
-  to [L, l=$L$] (1,5) % Spule
-  (4,4) to [short] (5,4) 
-  to [R, l_=$R_m$] (5,1); % Messwiderstand
-\end{circuitikz}
-\caption{Schaltbild eines Sperrfilters}
-\label{plan:sperr}
-\end{figure}
