Formatierung Theorie verbessert

--- a/versuch_1/ergebnisse.tex
+++ b/versuch_1/ergebnisse.tex
@@ -1,10 +1,10 @@
 \section{Diskussion der Ergebnisse}
 \begin{figure}
-	\includegraphics[width=.9\textwidth]{images/durchlassfilter+theorie+R_ges-fit}
+	\includegraphics[width=.9\textwidth]{images/plot/durchlassfilter+theorie+R_ges-fit.png}
 \caption{Plot der Messdaten des Durchlassfilters}
 \label{plot:durchlass+R_ges-fit}
 
-	\includegraphics[width=.9\textwidth]{images/plot-sperrfilter+theorie+R_L}
+	\includegraphics[width=.9\textwidth]{images/plot/plot-sperrfilter+theorie+R_L.png}
 \caption{Plot der Messdaten des Sperrfilters mit Theoriekurven}
 \label{plot:sperr}
 \end{figure}
