--- a/versuch_1/protokoll.tex
+++ b/versuch_1/protokoll.tex
@@ -6,6 +6,7 @@
 \author{PPG8\\
 Udo Beier, Leon Brückner, Valentin Olpp, Marco Zech, Sebastian Ziegler}
 %\maketitle
+\tableofcontents
 \listoffigures
 \include{vorwort}
 \include{theorie}
