--- a/versuch_1/header.tex
+++ b/versuch_1/header.tex
@@ -1,5 +1,4 @@
-\documentclass[
-]{scrreprt}
+\documentclass[titlepage]{scrartcl}
 
 %Referenzen zwischen unterschiedlichen Dateien
 \usepackage{xr}
