--- a/versuch_1/protokoll.tex
+++ b/versuch_1/protokoll.tex
@@ -2,16 +2,16 @@
 \begin{document}
 
 \title{Frequenzfilter}
+\subtitle{PPG8}
 \date{}
-\author{PPG8\\
-Udo Beier, Leon Brückner, Valentin Olpp, Marco Zech, Sebastian Ziegler}
-%\maketitle
+\author{Udo Beier \and Leon Brückner \and Valentin Olpp \and Marco Zech \and Sebastian Ziegler}
+\maketitle
 \tableofcontents
 \listoffigures
 \include{vorwort}
-\include{theorie}
-\include{durchfuehrung}
-\include{ergebnisse}
+\input{theorie}
+\input{durchfuehrung}
+\input{ergebnisse}
 
 
 \end{document}
