Formatierung verändert um zu viel Whitespace zu vermeiden

--- a/versuch_1/protokoll.tex
+++ b/versuch_1/protokoll.tex
@@ -8,7 +8,8 @@
 \maketitle
 \tableofcontents
 \listoffigures
-\include{vorwort}
+\newpage
+\input{vorwort}
 \input{theorie}
 \input{durchfuehrung}
 \input{ergebnisse}
