--- a/versuch_1/ergebnisse.tex
+++ b/versuch_1/ergebnisse.tex
@@ -1,11 +1,11 @@
 \section{Diskussion der Ergebnisse}
 
 \subsection{Durchlassfilter}
-Beim Aufzeichnen der Spannungskurven für verschiedene Ohmsche Wiederstände fiel auf, dass die Maxima im Vergleich zu denen der Theoriekurven viel zu klein waren. (siehe Abb. 5 \ref{plot:durchlass+R_ges-fit})
-\paragraph{}Abb. \ref{plot:durchlass+R_ges-fit} zeigt die gleiche Messreihe, nur wurde hier zur Berechnung der Theoriekurve der Gesamtwiederstand des Stromkreises von 5.4 Ohm verwendet. Den größten Anteil an diesem Wert hatte die Spule.\\
-Die geringen Abweichungen, die unter Berücksichtigung dieses Wiederstandes noch zu sehen sind, könnten unter anderem auf ungenauigkeiten der Messung mit dem "Sensor-Cassy" sowie auf ungenaue Kapazitäts- und Induktivitäts-Angaben zurückgeführt werden, fallen allerdings kaum ins Gewicht.
+Beim Aufzeichnen der Spannungskurven für verschiedene Ohmsche Wiederstände fiel auf, dass die Maxima im Vergleich zu denen der Theoriekurven deutlich zu klein waren. Dabei wurde auch der an weiteren Bauteilen, hierbei vorallem die Spule, abfallende Widerstand berücksichtigt. Dieser wurde zuvor zu $ 3,0 \Omega $ ausgemessen (siehe Abb. \ref{plot:durchlass+R_ges}). 
+\paragraph{}Abb. \ref{plot:durchlass+R_ges-fit} zeigt die gleiche Messreihe, wobei hier über dem Gesamtwiderstand des Kreises als Variable gefittet wurde. Ergebnis war, dass dieser nochmals um etwa $ 4 \Omega $ größer ist, als zuvor im "Ruhezustand" gemessen. Grund hierfür ist wohl schlichtweg zusätzlicher Widerstand, der sich als Übergangswiderstand bei den Steckverbindungen ausbildet oder ein thermischer Widerstand in der Widerstandsbox.\\
+Die geringen Abweichungen der Resonanzfrequenz, die überdies hinaus zu sehen sind, könnten unter anderem auf ungenaue Kapazitäts- und Induktivitätsangaben zurückgeführt werden, fallen allerdings kaum ins Gewicht.
 \subsection{Sperrfilter}
-Genau so verhält es sich mit den aus dem Betrieb der Schaltung als Sperrfilter entstandenen Kurven. Nach Berücksichtigung des Ohmschen Wiederstandes der Spule ergeben sich nur noch minimale Abweichungen der Theorie zu den Messwerten, einzig die Resonanzfrequenz konnte nicht getroffen werden. Hier schien es uns am warscheinlichsten, dass der Wert der Induktivität der zweiten Spule mit 36 mH nicht korrekt war.
+Ähnlich verhält es sich mit den aus dem Betrieb der zweiten Schaltung als Sperrfilter entstandenen Kurven (Abb. \ref{plot:sperr}). Nach Berücksichtigung des ohmschen Widerstandes der Spule ergeben sich nur noch minimale Abweichungen zwischen Theorie und den Messwerten, einzig die Resonanzfrequenz konnte nicht getroffen werden. Hier scheint es ebenfalls am warscheinlichsten, dass die Induktivität der zweiten Spule mit 36 mH nicht korrekt ist oder dass in anderen Bauteilen ungewollte Induktivitäten oder Kapazitäten auftreten.
 \begin{figure}
         \includegraphics[width=.9\textwidth]{images/plot/durchlassfilter+theorie+R_ges.png}
 \caption{Plot der Messdaten des Durchlassfilters (unter Vernachlässigung des Restlichen Wiederstandes)}
@@ -20,3 +20,5 @@ Genau so verhält es sich mit den aus dem Betrieb der Schaltung als Sperrfilter 
 \caption{Plot der Messdaten des Sperrfilters mit Theoriekurven}
 \label{plot:sperr}
 \end{figure}
+Vergleicht man also die Theorie der behandelten Frequenzfilter mit den tatsächlich gemessenen Ergebnissen, so stimmen beide vor allem in qualitativer Hinsicht gut überein. Durch Ersetzen von etwa der Widerstandsbox durch einen Schichtwiderstand, eine Reduktion des Widerstands der Spule sowie durch Löten der Kontake an Stelle von gewöhnlichen Steckverbindungen müssten darüberhinaus deutliche Verbesserungen möglich sein, was die Höhe des Spannungsverlaufs und dessen Abweichung von der Theorie betrifft. 
+Darüber hinaus müsste es durch die Verwendung genauer ausgemessener Induktivitäten und Kapazitäten auch möglich sein, die Resonanzfrequenz besser zu treffen. 
