Position der Plots verändert, Klickbare Refernzen hinzugefügt

--- a/versuch_1/header.tex
+++ b/versuch_1/header.tex
@@ -1,5 +1,7 @@
 \documentclass[titlepage]{scrartcl}
 
+
+
 %Referenzen zwischen unterschiedlichen Dateien
 \usepackage{xr}
 \externaldocument{theorie}
@@ -51,3 +53,6 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\K}{\mathbb{K}}
 \newcommand{\C}{\mathbb{C}}
+
+%Klickbare Referenzen
+\usepackage[hidelinks]{hyperref}
