modified:   ergebnisse.tex

--- a/versuch_1/ergebnisse.tex
+++ b/versuch_1/ergebnisse.tex
@@ -1,8 +1,8 @@
 \section{Diskussion der Ergebnisse}
 
 \subsection{Durchlassfilter}
-Beim Aufzeichnen der Spannungskurven für verschiedene Ohmsche Wiederstände fiel auf, dass die Maxima im Vergleich zu denen der Theoriekurven deutlich zu klein waren. Dabei wurde auch der an weiteren Bauteilen, hierbei vorallem die Spule, abfallende Widerstand berücksichtigt. Dieser wurde zuvor zu $ 3,0 \Omega $ ausgemessen (siehe Abb. \ref{plot:durchlass+R_ges}).\\
-Abbildung \ref{plot:durchlass+R_ges-fit} zeigt die gleiche Messreihe, wobei hier über dem Gesamtwiderstand des Kreises als Variable gefittet wurde. Ergebnis war, dass dieser nochmals um etwa $ 4 \Omega $ größer ist, als zuvor im "Ruhezustand" gemessen. Grund hierfür ist wohl schlichtweg zusätzlicher Widerstand, der sich als Übergangswiderstand bei den Steckverbindungen ausbildet oder ein thermischer Widerstand in der Widerstandsbox.\\
+Beim Aufzeichnen der Spannungskurven für verschiedene Ohmsche Wiederstände fiel auf, dass die Maxima im Vergleich zu denen der Theoriekurven deutlich zu klein waren. Dabei wurde auch der an weiteren Bauteilen, hierbei vorallem die Spule, abfallende Widerstand berücksichtigt. Dieser wurde zuvor zu 3,0 $  \Omega $ ausgemessen (siehe Abb. \ref{plot:durchlass+R_ges}).\\
+Abbildung \ref{plot:durchlass+R_ges-fit} zeigt die gleiche Messreihe, wobei hier über dem Gesamtwiderstand des Kreises als Variable gefittet wurde. Ergebnis war, dass dieser nochmals um etwa 4,0 $  \Omega $ größer ist, als zuvor im "Ruhezustand" gemessen. Grund hierfür ist wohl schlichtweg zusätzlicher Widerstand, der sich als Übergangswiderstand bei den Steckverbindungen ausbildet oder ein thermischer Widerstand in der Widerstandsbox.\\
 Die geringen Abweichungen der Resonanzfrequenz, die überdies hinaus zu sehen sind, könnten unter anderem auf ungenaue Kapazitäts- und Induktivitätsangaben zurückgeführt werden, fallen allerdings kaum ins Gewicht.
 \begin{figure}
         \includegraphics[width=.9\textwidth]{images/plot/durchlassfilter+theorie+R_ges.png}
