Rechtschreib und Kommafehler verbessert

--- a/versuch_1/header.tex
+++ b/versuch_1/header.tex
@@ -45,7 +45,7 @@
 %Schaltbilder malen
 \usepackage[europeanresistors,cuteinductors,siunitx]{circuitikz}
 
-%\usepackage[german=guillemets]{csquotes}
+\usepackage{csquotes}
 
 %Formatierungsanweisungen
 \newcommand{\wichtig}[1]{\underline{\large{#1}}}
