Literaturverzeichniss hinzugefügt Formatierung verändert. Bitte Korrekturlesen

--- a/versuch_1/header.tex
+++ b/versuch_1/header.tex
@@ -34,6 +34,11 @@
 
 %\usepackage{mnsymbol}
 
+% Interssante natbib Optionen: 
+% numbers : Nummerierte Zitateinheiten
+% sort&compress : Bei mehrfachen Zitaten, Sortierung und ggf. Verkürzungen
+\usepackage[]{natbib}
+
 %Vectorpfeile schöner
 \usepackage{esvect}
 
