--- a/versuch_1/protokoll.tex
+++ b/versuch_1/protokoll.tex
@@ -14,5 +14,8 @@
 \input{durchfuehrung}
 \input{ergebnisse}
 
+%\nocite{*}
+\bibliographystyle{natdin}
+\bibliography{literature.bib}
 
 \end{document}
