--- a/versuch_1/theorie.tex
+++ b/versuch_1/theorie.tex
@@ -6,7 +6,7 @@ Mit den Kirchhoffschen Regeln und
 $
 U=Z\cdot I
 $ 
-gilt:
+gilt \footnote{vgl. \cite[151 ff.]{demtroder2009experimentalphysik}}
 \begin{equation}
 U_a=\frac{R}{R+i\left(\omega L-\frac{1}{\omega C}\right)}\cdot U_e\\
 \end{equation}
@@ -43,6 +43,7 @@ $
 Wenn die Spule einen Widerstand $R_L$ besitzt, ändert sich Gleichung (2) zu
 \begin{equation}
 \Rightarrow\left| U_a \right| = \frac{R}{\sqrt{(R+R_L)^2+\left(\omega L - \frac{1}{\omega C}\right)}}\cdot \left| U_e \right|
+\label{form:durchlass}
 \end{equation}
 also wird die Wechselspannung $U_e$ selbst bei der Resonanzfrequenz nicht vollständig durchgelassen.
 \begin{figure}
@@ -135,7 +136,7 @@ Einsetzen der Substitutionen und Ausschreiben liefert dann folgende Gleichung, d
 
 \footnotesize
 \begin{align}
-&\left| \frac{U_a}{U_e} \right| =  \\
+&\left| \frac{U_a}{U_e} \right| = \label{form:sperr} \\
 &\frac{R\left(R^2_L+\omega ^2\left[C\left(R^2_L+\omega ^2 L^2 \right) - L\right] ^2 \right)}{\sqrt{ \left( R^2_L + \omega ^2L^2\right) R_L+R_{ges}\left\{ R_L^2+\omega ^2\left[ C\left( R_L^2+\omega ^2L^2\right) -L\right] ^2\right\}^2+\left(R^2_L+\omega^2L^2\right)^2\omega^2\left[C\left(R^2_L+\omega^2L^2\right)-L\right]}}\nonumber
 \end{align}
 \normalsize
