--- a/versuch_1/durchfuehrung.tex
+++ b/versuch_1/durchfuehrung.tex
@@ -4,7 +4,7 @@ Zur Überprüfung der Funktionsweise eines Frequenzfilters wurde zunächst die S
 Abb. \ref{plan:durchlass} auf Seite \pageref{plan:durchlass} wie in Abb. \ref{img:durchlass} realisiert. Nach anfänglichen Problemen mit der richtigen Dimensionierung der verwendeten Spule haben wir hier schließlich eine Spule "Leybold 56214" mit 500 Windungen und einer Induktivität von 9 mH verwendet, wobei das Augenmerk auf einer möglichst geringen Windungszahl liegt, um den in der Spule angesiedelten Widerstand möglichst gering zu halten. Dieser liegt für die Spule bei angegebenen 2,5 $ \Omega $, was durch Messung bestätigt wurde. Auf
 der anderen Seite musste auch eine hinreichend große Induktivität garantiert werden, damit die Resonanzfrequenz, in deren Umgebungen die Messungen stattfanden, in einem gut erfassbaren Bereich lagen. Weiter wurde ein Plastikfolienkondensator der Firma \enquote{WIMA} der Kapazität 0,22 $  \mu F $ sowie in einem zweiten Teilversuch ein Kondensator gleicher Bauart, allerdings mit 4,7 $  \mu F $ Kapazität, verwendet. Da beide Teilversuche übereinstimmende Ergebnisse lieferten, wird in der Auswertung nur der erste Teilversuch dargestellt. Weiter wurde der Widerstand als variabel gewählt, wobei hier ein
 Widerstandskasten, mit dem Widerstände im Bereich von 1 $ \Omega $ bis mehrere $M \Omega $ zugeschaltet werden können, verwendet wurde. \\
-Zur Erzeugung der Eingangsspannung wurde zunächst ein Frequenzgenerator der Marke Hameg (Programmable 15 MHz Function Generator, HM8131/2) verwendet, zur Vereinfachung und Automatisierung der Messung wurde dieser allerdings durch das Power-Cassy ersetzt.
+Zur Erzeugung der Eingangsspannung wurde zunächst ein Frequenzgenerator der Marke Hameg (Programmable 15 MHz Function Generator, HM8131/2) verwendet, zur Vereinfachung und Automatisierung der Messung wurde dieser allerdings durch das Power-Cassy ersetzt \footnote{vgl. \cite[42f.]{cassy2013manual}} .
 Die Messung der über dem Widerstand abfallenden Ausgangsspannung wurde bei einem ersten Aufbau mit einem Oszilloskop (Tektronix TDS 2024 100MHz, PPL28/2/001) durchgeführt. Hierbei stellte sich allerdings heraus, dass die Messungen etwas an Genauigkeit zu wünschen übrig ließen. Bei der tatschlichen Durchführung des Experiments haben wir stattdessen das Sensor-Cassy zugeschaltet; Vorteil hierbei ist klar die direkte Übertragung der Daten in die Cassy-Software.
 
 \begin{figure}[h]
