--- a/versuch_1/ergebnisse.tex
+++ b/versuch_1/ergebnisse.tex
@@ -1,7 +1,7 @@
 \section{Diskussion der Ergebnisse}
 
 \subsection{Durchlassfilter}
-Beim Aufzeichnen der Spannungskurven für verschiedene ohmsche Widerstände fiel auf, dass die Maxima im Vergleich zu denen der Theoriekurven berechnet nach \eqref{form:durchlass} deutlich zu klein waren. Dabei wurde auch der an weiteren Bauteilen, hierbei vorallem die Spule, abfallende Widerstand berücksichtigt. Dieser wurde zuvor zu 3,0 $  \Omega $ ausgemessen (siehe Abb. \ref{plot:durchlass+R_ges}).
+Beim Aufzeichnen der Spannungskurven für verschiedene ohmsche Widerstände fiel auf, dass die Maxima im Vergleich zu denen der Theoriekurven berechnet nach \eqref{form:durchlass} deutlich zu klein waren. Dabei wurde auch der an weiteren Bauteilen, hierbei vor allem die Spule, abfallende Widerstand berücksichtigt. Dieser wurde zuvor zu 3,0 $  \Omega $ ausgemessen (siehe Abb. \ref{plot:durchlass+R_ges}).
 \begin{figure}[h]
         \includegraphics[width=.9\textwidth]{images/plot/durchlassfilter+theorie+R_ges.png}
 \caption{Plot der Messdaten des Durchlassfilters unter Berücksichtigung des gemessenen Gesamtwiderstandes}
@@ -24,5 +24,6 @@ Die geringen Abweichungen der Resonanzfrequenz, die überdies hinaus zu sehen si
 \label{plot:sperr}
 \end{figure}
 
-\paragraph{}Vergleicht man also die Theorie der behandelten Frequenzfilter mit den tatsächlich gemessenen Ergebnissen, so stimmen beide vor allem in qualitativer Hinsicht gut überein. Durch Ersetzen von etwa der Widerstandsbox durch einen Schichtwiderstand, eine Reduktion des Widerstands der Spule sowie durch Löten der Kontake an Stelle von gewöhnlichen Steckverbindungen müssten darüberhinaus deutliche Verbesserungen möglich sein, was die Höhe des Spannungsverlaufs und dessen Abweichung von der Theorie betrifft. 
+\subsection{Fazit}
+Vergleicht man also die Theorie der behandelten Frequenzfilter mit den tatsächlich gemessenen Ergebnissen, so stimmen beide vor allem in qualitativer Hinsicht gut überein. Durch Ersetzen von etwa der Widerstandsbox durch einen Schichtwiderstand, eine Reduktion des Widerstands der Spule sowie durch Löten der Kontake an Stelle von gewöhnlichen Steckverbindungen müssten darüberhinaus deutliche Verbesserungen möglich sein, was die Höhe des Spannungsverlaufs und dessen Abweichung von der Theorie betrifft. 
 Darüber hinaus müsste es durch die Verwendung genauer ausgemessener Induktivitäten und Kapazitäten auch möglich sein, die Resonanzfrequenz besser zu treffen. 
