--- a/versuch_1/protokoll.tex
+++ b/versuch_1/protokoll.tex
@@ -3,7 +3,7 @@
 
 \title{Frequenzfilter}
 \subtitle{PPG8}
-\date{}
+\date{November 2013}
 \author{Udo Beier \and Leon Brückner \and Valentin Olpp \and Marco Zech \and Sebastian Ziegler}
 \maketitle
 \tableofcontents
