--- a/versuch_1/theorie.tex
+++ b/versuch_1/theorie.tex
@@ -6,7 +6,7 @@ Mit den Kirchhoffschen Regeln und
 $
 U=Z\cdot I
 $ 
-gilt \footnote{vgl. \cite[151 ff.]{demtroder2009experimentalphysik}}
+gilt \footnote{\cite[151 ff.]{demtroder2009experimentalphysik}}
 \begin{equation}
 U_a=\frac{R}{R+i\left(\omega L-\frac{1}{\omega C}\right)}\cdot U_e\\
 \end{equation}
@@ -39,7 +39,7 @@ $
 \Delta \omega=\frac{R}{L}
 \end{equation}
 , d.h. bei kleineren Widerständen ergeben sich 'schärfere' Peaks.
-\paragraph{}Diese Betrachtung nimmt an, dass der Ohmsche Widerstand der Spule vernachlässigbar ist, was in der Praxis jedoch nicht immer der Fall ist.
+\paragraph{}Bei dieser Betrachtung wird angenommen, dass der Ohmsche Widerstand der Spule vernachlässigt, unter der Annahme, dass dieser sehr klein ist, was in der Praxis jedoch nicht immer der Fall ist.
 Wenn die Spule einen Widerstand $R_L$ besitzt, ändert sich Gleichung (2) zu
 \begin{equation}
 \Rightarrow\left| U_a \right| = \frac{R}{\sqrt{(R+R_L)^2+\left(\omega L - \frac{1}{\omega C}\right)}}\cdot \left| U_e \right|
@@ -87,28 +87,28 @@ Bei der Resonanzfrequenz (3) geht nun $\left| U_a \right|\longrightarrow 0$, d.h
 \end{equation}
 
 Hier ergeben also größere Widerstände 'schärfere' Peaks.  
-\newpage Auch hier kann man der Spule einen Widerstand $R_L$ zuweisen, außerdem wurde ein nicht weiter spezifizierter zusätzlicher Widerstand $R_{zus}$ eingefügt. \\Siehe Abb. \ref{plan:sperr-R_L} auf Seite \pageref{plan:sperr-R_L}.
+\newpage Auch hier kann man der Spule einen Widerstand $R_L$ zuweisen, außerdem wurde ein nicht weiter spezifizierter zusätzlicher Widerstand $R_{zus}$ eingefügt, der die Widerstände der Steckverbindungen darstellt. \\Siehe Abb. \ref{plan:sperr-R_L} auf Seite \pageref{plan:sperr-R_L}.
 \begin{figure}
 \centering
 \begin{circuitikz}
 \draw
-  (0,1) to [short, -o] (7,1)
-  (6,1) to [open, l_=$U_a$] (7,4) %Ausgangsspannung
-  (7,4) to [short, o-] (6,4) 
+  (0,1) to [short, -o] (6,1)
+  (6,1) to [open, l_=$U_a$] (6,4) %Ausgangsspannung
+  (6,4) to [short, o-] (5,4) 
 
   (0,1) to [csV, l=$U_e$] (0,4) % Eingangsspannung
   to [short, ] (1,4)
   (1,5) to [short] (1,3)
   to [C, l_=$C$] (4,3) % Kondensator
   to [short] (4,5)
-  to [R, l=$R_L$] (2.5,5) %Widerstand der Spule
   to [L, l=$L$] (1,5) % Spule
-  (4,4) to [R,l=$R_{zus}$] (6,4) 
-  to [R, l_=$R_m$] (6,1); % Messwiderstand
+  (4,4) to [short] (5,4) 
+  to [R, l_=$R_m$] (5,1); % Messwiderstand
 \end{circuitikz}
-\caption{Position der zusätzlich angenommenen Widerstände}
-\label{plan:sperr-R_L}
+\caption{Schaltbild eines Sperrfilters}
+\label{plan:sperr}
 \end{figure}
+
 
 \paragraph{} Der Gesamtwiderstand der Parallelschaltung aus Spule und Kondensator ist dann:
 
@@ -144,19 +144,20 @@ Einsetzen der Substitutionen und Ausschreiben liefert dann folgende Gleichung, d
 \centering
 \begin{circuitikz}
 \draw
-  (0,1) to [short, -o] (6,1)
-  (6,1) to [open, l_=$U_a$] (6,4) %Ausgangsspannung
-  (6,4) to [short, o-] (5,4) 
+  (0,1) to [short, -o] (7,1)
+  (6,1) to [open, l_=$U_a$] (7,4) %Ausgangsspannung
+  (7,4) to [short, o-] (6,4) 
 
   (0,1) to [csV, l=$U_e$] (0,4) % Eingangsspannung
   to [short, ] (1,4)
   (1,5) to [short] (1,3)
   to [C, l_=$C$] (4,3) % Kondensator
   to [short] (4,5)
+  to [R, l=$R_L$] (2.5,5) %Widerstand der Spule
   to [L, l=$L$] (1,5) % Spule
-  (4,4) to [short] (5,4) 
-  to [R, l_=$R_m$] (5,1); % Messwiderstand
+  (4,4) to [R,l=$R_{zus}$] (6,4) 
+  to [R, l_=$R_m$] (6,1); % Messwiderstand
 \end{circuitikz}
-\caption{Schaltbild eines Sperrfilters}
-\label{plan:sperr}
+\caption{Position der zusätzlich angenommenen Widerstände}
+\label{plan:sperr-R_L}
 \end{figure}
