Weitere Verbesserungen nach den Korrekturvorschlägen des Tutors vorgenommen

--- a/versuch_1/ergebnisse.tex
+++ b/versuch_1/ergebnisse.tex
@@ -20,8 +20,8 @@ Der Statistische Fehler wurde in beiden Versuchen nicht mit dargestellt, da er i
 \caption{Plot der Messdaten des Durchlassfilters (Theoriekurven mit gefittetem Gesamtwiderstand)}
 \label{plot:durchlass+R_ges-fit}
 
-        \includegraphics[width=.9\textwidth]{images/plot/sperrfilter+theorie+R_L.png}
-\caption{Plot der Messdaten des Sperrfilters mit Theoriekurven}
+        \includegraphics[width=.9\textwidth]{images/plot/Sperrfilter-mit-Theoriekurven-mit-R_L.png}
+\caption{Plot der Messdaten des Sperrfilters mit (Theoriekurven mit gemessenem Widerstand)}
 \label{plot:sperr}
 \end{figure}
 
