--- a/versuch_1/protokoll.tex
+++ b/versuch_1/protokoll.tex
@@ -13,7 +13,7 @@
 \input{theorie}
 \input{durchfuehrung}
 \input{ergebnisse}
-
+\newpage
 %\nocite{*}
 \bibliographystyle{natdin}
 \bibliography{literature.bib}
